<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/backg"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:padding="30dip"
    android:orientation="horizontal">
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_gravity="center" >
        <TextView
            android:textColor="@color/defTexts"
            android:text="@string/main_title"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="27dip"
            android:textSize="24.5sp" />

        <com.rey.material.widget.Button
            android:id="@+id/continue_button"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:background="@drawable/sudokubutton_lowradius"
            android:textColor="@color/colorBlue"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/continue_label"
            android:layout_marginBottom="7dip"
            app:rd_enable="true"
            style="@style/Material.Drawable.Ripple.Touch.MatchView.Light"/>

        <com.rey.material.widget.Button
            android:id="@+id/new_button"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/sudokubutton_lowradius"
            android:textColor="@color/colorBlue"
            android:text="@string/new_game_label"
            android:layout_marginBottom="7dip"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            app:rd_enable="true"
            style="@style/Material.Drawable.Ripple.Touch.MatchView.Light"/>
        <com.rey.material.widget.Button
            android:id="@+id/about_button"
            android:layout_width="match_parent"
            android:background="@drawable/sudokubutton_lowradius"
            android:textColor="@color/colorBlue"
            android:layout_height="36dp"
            android:text="@string/about_label"
            android:layout_marginBottom="7dip"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            app:rd_enable="true"
            style="@style/Material.Drawable.Ripple.Touch.MatchView.Light"/>
        <com.rey.material.widget.Button
            android:id="@+id/exit_button"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/sudokubutton_lowradius"
            android:textColor="@color/colorBlue"
            android:text="@string/exit_label"
            app:rd_enable="true"
            style="@style/Material.Drawable.Ripple.Touch.MatchView.Light"/>
    </LinearLayout>
</LinearLayout>